# fastapi-kit-starter

./: .env.default  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: code-quality.yml  tests.yml
alembic/: env.py
alembic/versions/: 154e4a821daa_init.py  60a6971b21b7_create_notes_table.py  aaf186fa2c42_add_category_notes_user_and_usernotes.py  d2a1454b1525_initial_migration.py
app/: main.py
app/auth/: jwt.py
app/config/: database.py  settings.py
app/controllers/: __init__.py  base.py
app/helpers/: constance.py  enum.py  response.py
app/models/: base.py  categories.py  notes.py  users.py
app/routes/: api.py
app/routes/v1/: auth.py  categories.py  notes.py  users.py
app/schemas/: attachments.py  base.py  categories.py  notes.py  users.py
app/utils/: exception.py
tests/: test_main.py  test_notes.py
