[tool.poetry]
name = "fastapi-kit-started"
version = "0.1.0"
description = ""
authors = ["Enrique Lazo Bello <enlabe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.12"}
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pysen = "^0.10.3"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.black]
line-length = 100

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 100
multi_line_output = 3
use_parentheses = true

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 100

[[tool.pysen.lint.mypy_targets]]
    paths = ["app", "tests"]

[tool.poetry.scripts]
start = "app.main:start"
