[tool.poetry]
name = "fastapi-kit-started"
version = "0.1.0"
description = ""
authors = ["Enrique Lazo Bello <enlabe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { extras = ["all"], version = "^0.115.12" }
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.8.1"
pytest-cov = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pysen = "^0.11.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^4.2.0"
mypy = "^1.4.1"
bandit = "^1.8.3"
autopep8 = "^2.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.black]
line-length = 88
target-version = ['py312']
exclude = ".venv/"

[tool.isort]
default_section = "THIRDPARTY"
ensure_newline_before_comments = true
force_grid_wrap = 0
force_single_line = false
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
profile = "black"

[tool.flake8]
ignore = "E203 E266 E501 W503 F403 F401"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
verbose = true
exclude = ".venv"

[tool.pysen]
version = "0.11"

[tool.pysen.lint.source]
includes = ["app", "tests"]


[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py312"

[tool.mypy]
exclude = [".venv/"]

[[tool.pysen.lint.mypy_targets]]
paths = ["app", "tests"]

[tool.autopep8]
max-line-length = 88
verbose = true
exclude = ".venv/"

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
